<resources>
    <string name="app_name">GroupTripExpense</string>

    <string name="trip">Trip</string>
    <string name="create_trip">Create a trip</string>
    <string name="members">Add Members</string>
    <string name="add">Add</string>
    <string name="add_expense">Add Expense</string>
    <string name="save">Save</string>
    <string name="who_paid">Who paid</string>
    <string name="expense_type">Expense type</string>
    <string name="expenses">Expenses:</string>
    <string name="amount">Amount</string>
    <string name="divided_amount">Divided amount:</string>
    <string name="name">Name:</string>
    <string name="paid">Paid:</string>
    <string name="to_pay">To pay:</string>
    <string name="to_receive">To receive:</string>
    <string name="finish_trip">Finish trip</string>
    <string name="enter_trip_name">Enter trip name</string>
    <string name="enter_member_name">Enter member name</string>
    <string name="trip_name">Trip name:</string>
    <string name="no_expenses_yet">No added expense yet. Click \'+\' to add.</string>
    <string name="welcome">Welcome to group trip expense!</string>
    <string name="sign_in_to_continue">Please sign in to continue.</string>
</resources>
