<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textColor="#E6171D1D"
        android:text="@string/name"/>

    <TextView
        android:id="@+id/member_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="62dp"
        android:layout_marginTop="4dp"
        android:layout_toEndOf="@+id/name_label"
        android:textColor="#E6171D1D" />

    <TextView
        android:id="@+id/paid_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textColor="#E6171D1D"
        android:layout_below="@+id/name_label"
        android:text="@string/paid"/>

    <TextView
        android:id="@+id/paid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/member_name"
        android:layout_marginStart="71dp"
        android:layout_marginTop="1dp"
        android:layout_toEndOf="@+id/paid_label"
        android:textColor="#E6171D1D" />

    <TextView
        android:id="@+id/to_pay_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_below="@+id/paid_label"
        android:text="@string/to_pay"
        android:textColor="#E6171D1D" />

    <TextView
        android:id="@+id/to_pay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/paid"
        android:layout_marginStart="72dp"
        android:layout_marginTop="0dp"
        android:layout_toEndOf="@+id/paid_label"
        android:textColor="#E6171D1D" />

    <TextView
        android:id="@+id/to_receive_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_below="@+id/to_pay_label"
        android:text="@string/to_receive"
        android:textColor="#E6171D1D" />

    <TextView
        android:id="@+id/to_receive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/to_pay"
        android:layout_marginStart="35dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="20dp"
        android:layout_toEndOf="@+id/to_receive_label"
        android:textColor="#E6171D1D" />

    <View
        android:id="@+id/divider"
        style="@style/ViewDividerStyle"
        android:layout_below="@+id/to_receive_label" />

</RelativeLayout>